# MVCpp-ThroughTheLookingGlass

./: CMakeLists.txt  MVCpp-ThroughTheLookingGlass.jucer  flyway.conf
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/MVCpp-ThroughTheLookingGlass.xcodeproj/: project.pbxproj
Builds/MacOSX/MVCpp-ThroughTheLookingGlass.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/MVCpp-ThroughTheLookingGlass.xcodeproj/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/iOS/: Info-App.plist
Builds/iOS/MVCpp-ThroughTheLookingGlass.xcodeproj/: project.pbxproj
Builds/iOS/MVCpp-ThroughTheLookingGlass.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/iOS/MVCpp-ThroughTheLookingGlass.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Source/: HomeComponent.cpp  HomeComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Model.cpp  Model.h  cpp_mvc.sqlite
core/: Controller.cpp  Model.cpp  View.cpp
db/migration/: V1__Create_table.sql  V2__Create_model_table.sql  V3__student.sql
include/: Controller.h  Model.h  View.h  ViewListener.h
src/: main.cpp
